fix: tag overflow in dataview

--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@ Created by Daniel (@Nordwen) | https://github.com/Nordwen/obsidian-lumines
 
 ------------------------------------------------------------------------------
 
-Lumines Obsidian Version: 1.0.5
+Lumines Obsidian Version: 1.0.6
 Support Obsidian Version: 1.0.0+
 
 ------------------------------------------------------------------------------
@@ -362,6 +362,14 @@ body:not(.is-mobile) .workspace-leaf.mod-active .tree-item-self.has-focus {
 }
 
 /* Section: plugin-dataview */
+a.tag {
+   display: block;
+   width: auto;
+   max-width: fit-content;
+   overflow: hidden;
+   text-overflow: ellipsis;
+}
+
 .dataview.list-view-ul {
    margin-bottom: revert;
 }
